--- a/views/home.ejs
+++ b/views/home.ejs
@@ -12,12 +12,12 @@
     <form id="rowcolform" action="/form" method="post">
         <div class="form-group">
             <label>Enter Number of Rows:</label>
-            <input type="number" required id="row"/>
+            <input type="number" required id="row" name="row"/>
             <span class="error-message" id="row-error">rows is required</span>
         </div>
         <div class="form-group">
             <label>Enter Number of Columns:</label>
-            <input type="number" required id="col"/> 
+            <input type="number" required id="col" name="col"/> 
             <span class="error-message" id="col-error">columns is required</span> 
         </div>
         
