--- a/public/style/table.css
+++ b/public/style/table.css
@@ -14,7 +14,7 @@ h2{
     text-align: center;
 }
 table {
-    width: 100%;
+    width: 1000px;
     border-collapse: collapse;
     
     
@@ -39,7 +39,7 @@ input[type="submit"] {
     font-size: 1em;
     align-self: center;
     margin-top: 20px;
-    margin-left: 10px;
+    margin-left: 47%;
     transition: background-color 0.3s ease;
   }
 
